# EqText

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  a.c  algorithm-search.c  doc.txt  list.txt  main.c  main.cpp  main.h  makefile  settings.json
